輸入頁面初建

--- a/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
+++ b/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:background="#FFFFFF"
         android:backgroundTint="#000000"
         android:text="TextView"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,6 +30,7 @@
         android:background="#1565C0"
         android:backgroundTint="#0288D9"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
