--- a/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
+++ b/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,15 @@
 
     <TextView
         android:id="@+id/dateTextView"
-        android:layout_width="180dp"
+        android:layout_width="250dp"
         android:layout_height="70dp"
         android:background="#FFFFFF"
         android:backgroundTint="#000000"
-        android:text="TextView"
+        android:gravity="center"
+        android:text="yyyy年MM月dd日 EEEE"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.111"
@@ -25,11 +27,15 @@
 
     <TextView
         android:id="@+id/daliyAmount"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
         android:background="#1565C0"
         android:backgroundTint="#0288D9"
+        android:gravity="center"
+        android:text='您每日需要飲水量為：9999ml'
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -51,23 +57,25 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/name"
+                android:id="@+id/User_name"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.4"
-                android:text="TextView"
-                android:textAlignment="textEnd"
+                android:layout_weight="0.3"
+                android:gravity="center"
+                android:text="王曉明"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.6"
+                android:layout_weight="0.7"
+                android:gravity="center"
                 android:text="您今日的喝水量是"
                 android:textAlignment="textStart"
                 android:textSize="20sp" />
@@ -78,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:gravity="center"
-            android:text="9999"
+            android:text="0"
             android:textAlignment="center"
             android:textSize="150sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +117,7 @@
         android:layout_width="65dp"
         android:layout_height="65dp"
         android:backgroundTint="#5A575B"
+        android:onClick="menu"
         android:tint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
