--- a/InfoInput_hp_menu/app/src/main/res/layout/activity_menu.xml
+++ b/InfoInput_hp_menu/app/src/main/res/layout/activity_menu.xml
@@ -36,7 +36,8 @@
                 android:layout_height="80dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="40dp"
-                android:text="重置飲水目標"
+                android:onClick="reset"
+                android:text="重置基本資料"
                 android:textSize="24sp" />
 
             <Button
@@ -45,7 +46,7 @@
                 android:layout_height="80dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="40dp"
-                android:text="提醒功能"
+                android:text="提醒功能設定"
                 android:textSize="24sp" />
 
             <Button
@@ -54,7 +55,7 @@
                 android:layout_height="80dp"
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="40dp"
-                android:text="代償換算"
+                android:text="飲水平衡換算"
                 android:textSize="24sp" />
 
             <Button
@@ -73,6 +74,7 @@
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:background="#8D5A9B"
+        android:onClick="back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
