--- a/InfoInput_hp_menu/app/src/main/res/values/themes.xml
+++ b/InfoInput_hp_menu/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.InfoInput_hp_menu" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Chen" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.InfoInput_hp_menu" parent="Base.Theme.InfoInput_hp_menu" />
+    <style name="Theme.Chen" parent="Base.Theme.Chen" />
 </resources>
