--- a/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
+++ b/InfoInput_hp_menu/app/src/main/res/layout/activity_main.xml
@@ -111,6 +111,22 @@
         app:layout_constraintVertical_bias="0.952"
         app:srcCompat="@android:drawable/ic_input_add" />
 
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#00838F"
+        android:text="記錄今日飲水量"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/addButton"
+        app:layout_constraintVertical_bias="0.05" />
+
+
     <ImageButton
         android:id="@+id/imageButton2"
         android:layout_width="65dp"
