--- a/InfoInput_hp_menu/app/src/main/res/layout/activity_menu.xml
+++ b/InfoInput_hp_menu/app/src/main/res/layout/activity_menu.xml
@@ -28,7 +28,9 @@
                 android:layout_marginHorizontal="15dp"
                 android:layout_marginBottom="40dp"
                 android:text="查看歷史紀錄"
+                android:onClick="history"
                 android:textSize="24sp" />
+
 
             <Button
                 android:id="@+id/reset_daily"
@@ -73,4 +75,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023"
         app:srcCompat="@android:drawable/ic_menu_revert" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
